创建pc端新闻导航栏

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Title</title>
-        <link rel="stylesheet" href="./src/css/index.css">
+        <link rel="stylesheet" href="./src/css/pc.css">
+        <link rel="stylesheet" href="./src/css/mobile.css"/>
+        <meta name="viewport" content="width=device-width,
+                                       initial-scale=1,
+                                       minimun-scale=1,
+                                       maximun-scale=1,
+                                       user-scalable=no/>
     </head>
     <body>
-        <div id="mainContainer">123</div>
+        <div id="mainContainer">Welcome to ReactNews!</div>
     </body>
     <script type="text/javascript" src="src/js/bundle.js"></script>
 </html>
