--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
         <meta charset="UTF-8">
         <title>Title</title>
         <link rel="stylesheet" href="./src/css/pc.css">
-        <link rel="stylesheet" href="./src/css/mobile.css"/>
-        <meta name="viewport" content="width=device-width,
-                                       initial-scale=1,
-                                       minimun-scale=1,
-                                       maximun-scale=1,
-                                       user-scalable=no/>
+        <link rel="stylesheet" href="./src/css/mobile.css">
     </head>
     <body>
         <div id="mainContainer">Welcome to ReactNews!</div>
